src/test/ui/traits/trait-object-vs-lifetime.stderr
error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-object-vs-lifetime.rs:9:23
   |
LL |     let _: S<'static, dyn 'static +>;
   |                       ^^^^^^^^^^^^^

error[E0107]: this struct takes 1 lifetime argument but 2 lifetime arguments were supplied
  --> $DIR/trait-object-vs-lifetime.rs:11:12
   |
LL |     let _: S<'static, 'static>;
   |            ^        --------- help: remove this lifetime argument
   |            |
   |            expected 1 lifetime argument
   |
note: struct defined here, with 1 lifetime parameter: `'a`
  --> $DIR/trait-object-vs-lifetime.rs:4:8
   |
LL | struct S<'a, T>(&'a u8, T);
   |        ^ --

error[E0107]: this struct takes 1 type argument but 0 type arguments were supplied
  --> $DIR/trait-object-vs-lifetime.rs:11:12
   |
LL |     let _: S<'static, 'static>;
   |            ^ expected 1 type argument
   |
note: struct defined here, with 1 type parameter: `T`
  --> $DIR/trait-object-vs-lifetime.rs:4:8
   |
LL | struct S<'a, T>(&'a u8, T);
   |        ^     -
help: add missing type argument
   |
LL |     let _: S<'static, 'static, T>;
   |                              ^^^

error[E0224]: at least one trait is required for an object type
  --> $DIR/trait-object-vs-lifetime.rs:14:14
   |
LL |     let _: S<dyn 'static +, 'static>;
   |              ^^^^^^^^^^^^^

error[E0747]: type provided when a lifetime was expected
  --> $DIR/trait-object-vs-lifetime.rs:14:14
   |
LL |     let _: S<dyn 'static +, 'static>;
   |              ^^^^^^^^^^^^^

error: aborting due to 5 previous errors

Some errors have detailed explanations: E0107, E0224, E0747.
For more information about an error, try `rustc --explain E0107`.
